<resources>
    <string name="app_name">Muzira</string>

    <!--fragment_home_page-->
    <string name="title_homePage">Listening to music to keep your mood.</string>
    <string name="subtitle_homePage">Music brings peace to the heart. Listen to all music according to the features we have provided</string>
    <string name="getStarted">Get started</string>

    <!--fragment_sign_in-->
    <string name="loginNow">Login Now</string>
    <string name="not_have_account">Don\'t have an account!</string>
    <string name="register">Register</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="have_account">Already have an account?</string>
    <string name="enter_details">Please enter the details below to continue</string>
    
    <!--fragment_sign_up-->
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">Sign up</string>

    <!--fragment_music_player-->
    <string name="now_playing">Now Playing</string>
    <string name="terminator">Terminator</string>
    <string name="asake">Asake</string>
    <string name="elapsed_time">0.00</string>
    <string name="total_time">4.23</string>

    <!--fragment_sign_up_error-->
    <string name="fragment_sign_up_error_invalid_email">Invalid email format</string>
    <string name="fragment_sign_up_error_invalid_password">Password must be longer than 8 symbols and contain at least one lowercase and uppercase character, numeric symbol and special sign</string>
    <string name="fragment_sign_up_error_empty_confirm_password">Passwords don\'t match</string>

    <!--fragment_sign_in_error-->
    <string name="fragment_sign_in_error_no_user_found">No user found with such credentials. Please, try again</string>
</resources>
