<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".HomePageFragment">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/muzira_icon"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="375dp"/>

    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/title_homePage"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:fontFamily="@font/apax_bold"
        />

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/subtitle_homePage"
        android:textAlignment="center"
        android:textSize="16sp"
        android:fontFamily="@font/apax_thin"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_getStarted"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/red"
        android:text="@string/getStarted"
        android:textColor="@color/white"
        android:fontFamily="@font/apax_bold"
        app:cornerRadius="40dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:fontFamily="@font/apax_regular"
            />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:gravity="end"
            android:text="@string/login"
            android:textColor="@color/red_tr"
            android:fontFamily="@font/apax_regular"
            />
    </LinearLayout>

</LinearLayout>