<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".HomePageFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="330dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginNow"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:fontFamily="@font/apax_bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/apax_thin"
        android:text="@string/enter_details"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/light_gray"
        android:fontFamily="@font/apax_thin"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:layout_marginTop="45dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray"
        android:textColorHint="@color/gray"
        app:boxStrokeWidth="0sp"
        app:boxStrokeWidthFocused="0sp">

        <EditText
            android:id="@+id/et_password"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:fontFamily="@font/apax_thin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="textPassword"
            android:background="@color/light_gray"
            android:lines="1"
            android:maxLines="1"
            android:padding="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/red"
        android:text="@string/login"
        android:textColor="@color/white"
        android:fontFamily="@font/apax_bold"
        app:cornerRadius="40dp"
        android:layout_marginTop="75dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_have_account"
            android:fontFamily="@font/apax_regular"
            />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:gravity="end"
            android:text="@string/register"
            android:textColor="@color/red_tr"
            android:fontFamily="@font/apax_regular"
            />
    </LinearLayout>

</LinearLayout>