<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="23dp"
    tools:context=".MusicPlayerFragment">

    <ImageView
        android:id="@+id/btn_exit"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:src="@drawable/exit_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/apax_bold"
        android:text="@string/now_playing"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_photo_song"
        android:layout_width="310dp"
        android:layout_height="310dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/terminator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_playing" />

    <TextView
        android:id="@+id/tv_name_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/apax_bold"
        android:text="@string/terminator"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_photo_song"
        />

    <TextView
        android:id="@+id/tv_name_singer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/apax_medium"
        android:text="@string/asake"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name_song" />

    <SeekBar
        android:id="@+id/sb_song"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_marginTop="20dp"
        android:progressBackgroundTint="@color/red_tr"
        android:progressTint="@color/red"
        android:thumbTint="@color/red"
        app:layout_constraintTop_toBottomOf="@id/tv_name_singer" />

    <TextView
        android:id="@+id/tv_elapsed_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:textSize="12sp"
        android:fontFamily="@font/apax_thin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sb_song" />

    <TextView
        android:id="@+id/tv_total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:textSize="12sp"
        android:fontFamily="@font/apax_thin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sb_song" />

    <ImageView
        android:id="@+id/iv_prevSong"
        android:layout_width="22.5dp"
        android:layout_height="22.5dp"
        android:layout_marginEnd="28dp"
        android:src="@drawable/previous_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_play_or_pause"
        app:layout_constraintTop_toBottomOf="@id/tv_elapsed_time" />

    <ImageView
        android:id="@+id/iv_rewindBackWard"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="87dp"
        android:src="@drawable/backward_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_play_or_pause"
        app:layout_constraintTop_toBottomOf="@id/tv_elapsed_time"
        app:tint="@color/dark_gray" />

    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--        android:id="@+id/btn_play_or_pause"-->
    <!--        android:layout_width="63dp"-->
    <!--        android:layout_height="63dp"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/tv_elapsed_time"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        android:backgroundTint="@color/red"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:srcCompat="@drawable/play_icon"-->
    <!--        app:tint="@color/white"-->
    <!--        app:borderWidth="0dp"-->
    <!--        app:elevation="5dp"-->
    <!--        app:fabCustomSize="65dp"-->
    <!--        />-->

    <ImageView
        android:id="@+id/btn_play_or_pause"
        android:layout_width="66dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_elapsed_time"
        app:srcCompat="@drawable/play_button_icon"

        />

    <ImageView
        android:id="@+id/iv_rewindForward"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="87dp"
        android:src="@drawable/forward_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_play_or_pause"
        app:layout_constraintTop_toBottomOf="@id/tv_elapsed_time"
        app:tint="@color/dark_gray" />

    <ImageView
        android:id="@+id/iv_nextSong"
        android:layout_width="22.5dp"
        android:layout_height="22.5dp"
        android:layout_marginStart="28dp"
        android:src="@drawable/next_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_play_or_pause"
        app:layout_constraintTop_toBottomOf="@id/tv_elapsed_time" />

</androidx.constraintlayout.widget.ConstraintLayout>